--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,185 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="16dp"
     tools:context=".activities.MainActivity">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageview_logo"
-        android:layout_width="48dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/shift_helper_large"
-        app:layout_constraintEnd_toStartOf="@id/textview_main_title"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textview_main_title"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center_vertical"
-        android:text="排班助手"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textview_group_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:text="请输入组织或科室的名称"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_main_title" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_today_shift"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/shape_common_bg"
-        android:paddingStart="16dp"
-        android:paddingTop="24dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_group_name" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_1"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:drawableTop="@drawable/ic_shift"
-        android:drawableTint="@android:color/holo_blue_light"
-        android:paddingTop="16dp"
-        android:text="排班表"
-        android:backgroundTint="@android:color/transparent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/button_2"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview_today_shift" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_2"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@drawable/ic_shift_manage"
-        android:drawableTint="@android:color/holo_orange_light"
-        android:paddingTop="16dp"
-        android:text="开始排班"
-        app:layout_constraintEnd_toStartOf="@id/button_3"
-        app:layout_constraintStart_toEndOf="@id/button_1"
-        app:layout_constraintTop_toTopOf="@+id/button_1" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_3"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@drawable/ic_person3"
-        android:paddingTop="16dp"
-        android:text="成员管理"
-        app:layout_constraintEnd_toStartOf="@id/button_4"
-        app:layout_constraintStart_toEndOf="@id/button_2"
-        app:layout_constraintTop_toTopOf="@+id/button_2" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_4"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@drawable/ic_work_categoty"
-        android:drawableTint="@android:color/holo_purple"
-        android:paddingTop="16dp"
-        android:text="班次管理"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button_3"
-        app:layout_constraintTop_toTopOf="@+id/button_3" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_5"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@drawable/bed_ico"
-        android:paddingTop="16dp"
-        android:text="床位设定"
-        app:layout_constraintEnd_toStartOf="@id/button_6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_1" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_6"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@drawable/ic_assign_bed"
-        android:drawableTint="@android:color/holo_orange_dark"
-        android:paddingTop="16dp"
-        android:text="床位安排"
-        app:layout_constraintEnd_toStartOf="@id/button_7"
-        app:layout_constraintStart_toEndOf="@id/button_5"
-        app:layout_constraintTop_toTopOf="@+id/button_5" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_7"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@drawable/ic_absent_remain"
-        android:drawableTint="@android:color/holo_green_light"
-        android:paddingTop="16dp"
-        android:text="余假管理"
-        app:layout_constraintEnd_toStartOf="@id/button_8"
-        app:layout_constraintStart_toEndOf="@id/button_6"
-        app:layout_constraintTop_toTopOf="@+id/button_6" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_8"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        android:drawableTop="@mipmap/ic_launcher"
-        android:text="床位管理"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button_7"
-        app:layout_constraintTop_toTopOf="@+id/button_7" />
-
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:theme="@style/Theme.MaterialComponents"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="@dimen/radius_shape"
-        app:cardElevation="8dp"
-        app:contentPadding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_group_name">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageview_logo"
+            android:layout_width="48dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/shift_helper_large"
+            app:layout_constraintEnd_toStartOf="@id/textview_main_title"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="240dp"
+            android:id="@+id/textview_main_title"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:text="排班助手"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textview_group_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="2020年12月12日 星期一"
-            android:textColor="@android:color/holo_blue_dark"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </com.google.android.material.card.MaterialCardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:text="请输入组织或科室的名称"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_main_title" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_today_shift"
+            android:layout_width="0dp"
+            android:layout_height="172dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/shape_common_bg"
+            android:paddingStart="16dp"
+            android:paddingTop="24dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_group_name" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_1"
+            style="@style/MainButtonStyle"
+            android:layout_marginTop="16dp"
+            android:text="排班表"
+            app:iconTint="@android:color/holo_blue_bright"
+            app:icon="@drawable/ic_shift"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/button_2"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerview_today_shift" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_2"
+            style="@style/MainButtonStyle"
+            android:text="排班"
+            app:icon="@drawable/ic_shift_manage"
+            app:iconTint="@android:color/holo_orange_light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/button_1"
+            app:layout_constraintTop_toTopOf="@+id/button_1" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_3"
+            style="@style/MainButtonStyle"
+            android:layout_marginTop="16dp"
+            android:text="成员"
+            app:icon="@drawable/ic_person3"
+            app:iconTint="@android:color/holo_blue_dark"
+            app:layout_constraintTop_toBottomOf="@id/button_1"
+            app:layout_constraintEnd_toStartOf="@id/button_4"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_4"
+            style="@style/MainButtonStyle"
+            android:text="班次"
+            app:icon="@drawable/ic_work_categoty"
+            app:iconTint="@android:color/holo_green_dark"
+            app:layout_constraintStart_toEndOf="@id/button_3"
+            app:layout_constraintTop_toTopOf="@id/button_3"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_5"
+            style="@style/MainButtonStyle"
+            android:layout_marginTop="16dp"
+            app:icon="@drawable/bed_ico"
+            app:iconTint="@android:color/holo_blue_light"
+            android:text="床位"
+            app:layout_constraintEnd_toStartOf="@id/button_6"
+            app:layout_constraintTop_toBottomOf="@id/button_3"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_6"
+            style="@style/MainButtonStyle"
+            android:text="管床"
+            app:icon="@drawable/ic_assign_bed"
+            app:iconTint="@android:color/holo_orange_dark"
+            app:layout_constraintStart_toEndOf="@id/button_5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/button_5"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_7"
+            style="@style/MainButtonStyle"
+            android:layout_marginTop="16dp"
+            android:text="余假"
+            app:icon="@drawable/ic_absent_remain"
+            app:iconTint="@android:color/holo_green_dark"
+            app:layout_constraintEnd_toStartOf="@id/button_8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/button_5"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:visibility="invisible"
+            android:id="@+id/button_8"
+            style="@style/MainButtonStyle"
+            android:text="未启用"
+            app:icon="@drawable/ic_absent_remain"
+            app:iconTint="@android:color/holo_green_dark"
+            app:layout_constraintTop_toTopOf="@id/button_7"
+            app:layout_constraintStart_toEndOf="@id/button_7"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:theme="@style/Theme.MaterialComponents"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="@dimen/radius_shape"
+            app:cardElevation="8dp"
+            app:contentPadding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_group_name">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="2020年12月12日 星期一"
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
